# python-development-template

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
tests/: test_app.py
