[tool.poetry]
name = "python-app-template"
version = "0.1.0"
description = ""
authors = ["Hyuga Tsukui <gakikiki407@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
